@@ -371,19 +371,19 @@
   stack, written in assembly language</title>
 
 <variablelist>
-<varlistentry><term><filename role="clisp-cvs">src/sp68000.d</filename></term>
+<varlistentry><term><filename role="clisp-cvs">src/sp_asm_m68k.d</filename></term>
  <listitem><simpara>written in 68000 assembler, MIT syntax
 </simpara></listitem></varlistentry>
-<varlistentry><term><filename role="clisp-cvs">src/spsparc.d</filename></term>
+<varlistentry><term><filename role="clisp-cvs">src/sp_asm_sparc.d</filename></term>
  <listitem><simpara>written in SPARC assembler
 </simpara></listitem></varlistentry>
-<varlistentry><term><filename role="clisp-cvs">src/spsparc64.d</filename></term>
+<varlistentry><term><filename role="clisp-cvs">src/sp_asm_sparc64.d</filename></term>
  <listitem><simpara>written in 64-bit SPARC assembler
 </simpara></listitem></varlistentry>
-<varlistentry><term><filename role="clisp-cvs">src/sp80386.d</filename></term>
+<varlistentry><term><filename role="clisp-cvs">src/sp_asm_i386.d</filename></term>
  <listitem><simpara>written in i386/i486 assembler
 </simpara></listitem></varlistentry>
-<varlistentry><term><filename role="clisp-cvs">src/spmips.d</filename></term>
+<varlistentry><term><filename role="clisp-cvs">src/sp_asm_mips.d</filename></term>
  <listitem><simpara>written in MIPS assembler
 </simpara></listitem></varlistentry>
 </variablelist></section>
